<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg_color"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/normal_space"
            android:text="@string/Mine"
            android:textColor="#000"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/ContactUs"
            android:textColor="@color/normal_orange" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/personal_navibar_icon_message" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/rows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar"
        android:layout_above="@+id/bottomBar">

        <com.example.administrator.travel.VerticalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <include layout="@layout/index_my_list1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <include layout="@layout/index_my_list2" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
            </LinearLayout>
        </com.example.administrator.travel.VerticalScrollView>

        <!-- title shadow -->
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/title_shadow" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#cfd8dc"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/bottomBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_height="60sp">

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:background="#FFE3E3E3"
            android:text="@string/spot"
            android:src="@drawable/home"
            android:textColor="#515658"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:background="#FFE3E3E3"
            android:text="@string/footstep"
            android:textColor="#515658"
            android:src="@drawable/foot"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:background="#FFE3E3E3"
            android:text="@string/Me"
            android:src="@drawable/personal"
            android:textColor="#515658"
            android:textSize="18sp"/>

    </LinearLayout>
</RelativeLayout>