<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_space" >

        <TextView
            android:id="@+id/me_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/p_setting"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/Settings"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="NEW"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/new_icon"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hui_discount_item_rule_arrow" />
    </LinearLayout>

    <View
        android:layout_marginLeft="11dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/normal_bg_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:padding="@dimen/normal_space" >

        <TextView
            android:id="@+id/me_item_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/p_weather"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/Weather"
            android:textSize="@dimen/text_size_default" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/new_icon"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hui_discount_item_rule_arrow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/normal_bg_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:padding="@dimen/normal_space" >

        <TextView
            android:id="@+id/go_map_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/p_map"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:text="@string/ViewMap"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hui_discount_item_rule_arrow" />
    </LinearLayout>
    <View
        android:layout_marginLeft="11dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/normal_bg_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:padding="@dimen/normal_space" >

        <TextView
            android:id="@+id/off_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/p_offmap"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="离线地图"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="NEW"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/new_icon"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hui_discount_item_rule_arrow" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/normal_bg_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:padding="@dimen/normal_space" >

        <TextView
            android:id="@+id/about_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/p_about"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:text="@string/About"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="NEW"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hui_discount_item_rule_arrow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/normal_bg_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:padding="@dimen/normal_space" >

        <TextView
            android:id="@+id/feedback_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/p_con"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:text="@string/Feedback"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="NEW"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/new_icon"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hui_discount_item_rule_arrow" />
    </LinearLayout>
    <View
        android:layout_marginLeft="11dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/normal_bg_color" />

</LinearLayout>